--- a/credentials/accounts.yaml
+++ b/credentials/accounts.yaml
@@ -1,4 +1,6 @@
 accounts:
+  - username: shivapatel098k@gmail.com
+    password: 143Shivak@
   - username: user2@example.com
     password: password2
   - username: user3@example.com
